--- a/src/App.css
+++ b/src/App.css
@@ -28,7 +28,7 @@ body {
   background-color: #e6ecef;
 }
 
-h1, h2 {
+h1, h2, h3 {
   font-weight: 600;
   line-height: 1.1;
 }
@@ -39,6 +39,10 @@ h1 {
 
 h2 {
   font-size: 1.5em;
+}
+
+h3 {
+  font-size: 1.25em;
 }
 
 h4 {
@@ -64,105 +68,14 @@ h4 {
   max-width: 1280px;
 }
 
+/* React Tabs */
+
 .tab-panel {
   flex: 1;
   padding: 30px;
   background-color: #F7FAFC;
   height: 100vh;
   overflow: auto;
-}
-
-.preview-panel {
-  background-color: #fff;
-  height: 100vh;
-  width: 350px;
-  padding: 30px;
-  border-left: 1px solid #eee;
-  box-shadow: -2px 0 2px #f5f5f5;
-  overflow: auto;
-}
-
-.preview-image {
-  margin-bottom: 15px;
-  border-radius: 10px;
-  width: 100%;
-  height: 210px;
-  background-color: #eee;
-}
-
-.preview-caption {
-  padding-right: 10px;
-  text-align: left;
-  flex: 1;
-  overflow: hidden;
-}
-
-.preview-panel .favorite-icon {
-  margin: 4px 1px 0 0;
-  color: #999;
-}
-
-.preview-panel .favorite-icon.filled {
-  margin: 4px 1px 0 0;
-  color: #555;
-}
-
-.preview-panel .favorite-icon:hover {
-  transform: scale(1.1);
-  color: var(--selected-blue);
-  transition: 0.2s ease;
-}
-
-.preview-panel .favorite-icon.disabled,
-.preview-panel .favorite-icon.disabled:hover {
-  transform: none;
-  color: #d5d5d5;
-  transition: none;
-}
-
-.favorite-icon.blue {
-  color: var(--selected-blue);
-}
-
-.preview-caption p {
-  margin: 0;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-
-.preview-list {
-  padding: 0;
-  list-style: none;
-  font-size: var(--font-14);
-  margin-bottom: 30px;
-}
-
-.preview-list li {
-  display: flex;
-  padding: 10px 0;
-  border-bottom: 1px solid var(--border-color);
-}
-
-.preview-list li span {
-  font-weight: 500;
-}
-
-.preview-list p {
-  flex: 1;
-}
-
-.preview-list h4 {
-  font-size: 1rem;
-}
-
-.preview-list li p {
-  margin: 0;
-}
-
-.preview-description {
-  font-size: var(--font-14);
-  margin-bottom: 30px;
 }
 
 .react-tabs__tab-list {
@@ -201,49 +114,8 @@ h4 {
   outline: none;
 }
 
-.grid-wrapper {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
-  align-items: stretch;
-  gap: 20px 30px;
-}
+/* Buttons */
 
-.grid-item {
-  font-size: var(--font-14);
-  display: flex;
-  flex-direction: column;
-}
-
-.grid-item .image:hover {
-  transform: scale(1.02);
-  box-shadow: 0 3px 3px #bbb;
-  transition: 0.2s ease;
-}
-
-.grid-item .active {
-  outline: 2px solid var(--selected-blue);
-  outline-offset: 2px;
-}
-
-.grid-item .active.image:hover {
-  box-shadow: none;
-  transform: none;
-}
-
-.grid-item > div {
-  border-radius: 8px;
-  margin-bottom: 10px;
-  height: 150px;
-}
-
-.grid-item p  {
-  margin: 0;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-
-/* HELPERS */
 .btn-default  {
   appearance: none;
   background-color: transparent;
@@ -267,12 +139,11 @@ h4 {
   transition: none;
 }
 
-
 .btn-default.full {
   width: 100%;
 }
 
-/* HELPERS */
+/* helpers */
 
 .m-0 {
   margin: 0;
